--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li>Master of Statistics(2023-2025)
             <ul>
                 <li>University: Indian Statistical Institute(ISI),Kolkata</li>
-                 <li>Marks: 64% (ongoing) </li>
+                 <li>Marks: 66.2%  </li>
             </ul>
         </li>
 
@@ -47,7 +47,21 @@
     </ol>
 
     <hr />
+    <h1>Internships</h1>
+    <ol>
+        <li>Internship Trainee: Kotak Mahindra Bank [May 13,2024-July 12,2024]
+            <ul>
+        <li> Worked in Risk team for review of CD Bureau Hit Scorecard  review and validation .</li>
+        <li> Worked on developing a model for business Loans.</li></ul></li>
 
+        <li> Subject Matter Expert (Mathematics): Sci-Astra [March 24, 2023 -July 30, 2023] 
+        <ul><li> Creating educational study materials for the mathematics teams.</li>
+         <li> Handling minor technical issues in different places.</li></ul></li>
+        <li> Content Writing: No Help Too Big [May 9,2022-July 1,2022]
+         <ul><li> Writing for an online educational application named mystudypod.</li></ul></li>
+    </ol>
+
+    <hr />
     <h1>Projects</h1>
 
     <ol>
@@ -82,21 +96,7 @@
 
     <hr />
 
-    <h1>Internships</h1>
-    <ol>
-        <li>Internship Trainee: Kotak Mahindra Bank [May 13,2024-July 12,2024]
-            <ul>
-        <li> Worked in Risk team for review of CD Bureau Hit Scorecard  review and validation .</li>
-        <li> Worked on developing a model for business Loans.</li></ul></li>
 
-        <li> Subject Matter Expert (Mathematics): Sci-Astra [March 24, 2023 -July 30, 2023] 
-        <ul><li> Creating educational study materials for the mathematics teams.</li>
-         <li> Handling minor technical issues in different places.</li></ul></li>
-        <li> Content Writing: No Help Too Big [May 9,2022-July 1,2022]
-         <ul><li> Writing for an online educational application named mystudypod.</li></ul></li>
-    </ol>
-
-    <hr />
 
     <h1>Achievements</h1>
     <ol>
@@ -127,7 +127,7 @@
 
     <hr />
 
-    <h1>Class Projects</h1>
+    <h1>Some Class Projects</h1>
     <ol>
         <li> Given By Sandip Barui [Assistant PRofessor , ISI]<br>
            <strong>
